--- a/build.yaml
+++ b/build.yaml
@@ -247,6 +247,7 @@ filegroups:
   - include/grpc/grpc.h
   - include/grpc/status.h
   headers:
+  - src/core/ext/lb_policy/grpclb/proto/grpc/lb/v0/load_balancer.pb.h
   - src/core/lib/census/grpc_filter.h
   - src/core/lib/census/grpc_plugin.h
   - src/core/lib/channel/channel_args.h
@@ -262,9 +263,6 @@ filegroups:
   - src/core/lib/client_config/client_config.h
   - src/core/lib/client_config/connector.h
   - src/core/lib/client_config/initial_connect_string.h
-  - src/core/ext/lb_policy/grpclb/load_balancer_api.h
-  - src/core/ext/lb_policy/pick_first/pick_first.h
-  - src/core/ext/lb_policy/round_robin/round_robin.h
   - src/core/lib/client_config/lb_policy.h
   - src/core/lib/client_config/lb_policy_factory.h
   - src/core/lib/client_config/lb_policy_registry.h
@@ -324,7 +322,6 @@ filegroups:
   - src/core/lib/json/json_common.h
   - src/core/lib/json/json_reader.h
   - src/core/lib/json/json_writer.h
-  - src/core/ext/lb_policy/grpclb/proto/grpc/lb/v0/load_balancer.pb.h
   - src/core/lib/statistics/census_interface.h
   - src/core/lib/statistics/census_rpc_stats.h
   - src/core/lib/surface/api_trace.h
@@ -347,6 +344,7 @@ filegroups:
   - src/core/lib/transport/transport.h
   - src/core/lib/transport/transport_impl.h
   src:
+  - src/core/ext/lb_policy/grpclb/proto/grpc/lb/v0/load_balancer.pb.c
   - src/core/lib/census/grpc_context.c
   - src/core/lib/census/grpc_filter.c
   - src/core/lib/census/grpc_plugin.c
@@ -363,9 +361,6 @@ filegroups:
   - src/core/lib/client_config/connector.c
   - src/core/lib/client_config/default_initial_connect_string.c
   - src/core/lib/client_config/initial_connect_string.c
-  - src/core/ext/lb_policy/grpclb/load_balancer_api.c
-  - src/core/ext/lb_policy/pick_first/pick_first.c
-  - src/core/ext/lb_policy/round_robin/round_robin.c
   - src/core/lib/client_config/lb_policy.c
   - src/core/lib/client_config/lb_policy_factory.c
   - src/core/lib/client_config/lb_policy_registry.c
@@ -430,7 +425,6 @@ filegroups:
   - src/core/lib/json/json_reader.c
   - src/core/lib/json/json_string.c
   - src/core/lib/json/json_writer.c
-  - src/core/ext/lb_policy/grpclb/proto/grpc/lb/v0/load_balancer.pb.c
   - src/core/lib/surface/alarm.c
   - src/core/lib/surface/api_trace.c
   - src/core/lib/surface/byte_buffer.c
@@ -466,6 +460,27 @@ filegroups:
   - include/grpc/impl/codegen/grpc_types.h
   - include/grpc/impl/codegen/propagation_bits.h
   - include/grpc/impl/codegen/status.h
+- name: grpc_lb_policy_grpclb
+  headers:
+  - src/core/ext/lb_policy/grpclb/load_balancer_api.h
+  src:
+  - src/core/ext/lb_policy/grpclb/load_balancer_api.c
+  uses:
+  - grpc_base
+- name: grpc_lb_policy_pick_first
+  headers:
+  - src/core/ext/lb_policy/pick_first/pick_first.h
+  src:
+  - src/core/ext/lb_policy/pick_first/pick_first.c
+  uses:
+  - grpc_base
+- name: grpc_lb_policy_round_robin
+  headers:
+  - src/core/ext/lb_policy/round_robin/round_robin.h
+  src:
+  - src/core/ext/lb_policy/round_robin/round_robin.c
+  uses:
+  - grpc_base
 - name: grpc_secure
   headers:
   - src/core/lib/security/auth_filters.h
@@ -639,6 +654,9 @@ libs:
   - grpc_transport_chttp2_client_secure
   - grpc_transport_chttp2_server_insecure
   - grpc_transport_chttp2_client_insecure
+  - grpc_lb_policy_grpclb
+  - grpc_lb_policy_pick_first
+  - grpc_lb_policy_round_robin
   - grpc_secure
   - grpc_codegen
   - census
@@ -722,6 +740,9 @@ libs:
   - grpc_base
   - grpc_transport_chttp2_server_insecure
   - grpc_transport_chttp2_client_insecure
+  - grpc_lb_policy_grpclb
+  - grpc_lb_policy_pick_first
+  - grpc_lb_policy_round_robin
   - grpc_codegen
   - census
   - nanopb
